Implementacion correcta de swagger con jwt
